--- a/about.html
+++ b/about.html
@@ -54,11 +54,15 @@
             <div>
               <h2 style="color: var(--accent2); font-weight: bold; font-family: 'Montserrat', sans-serif;">Technical Skills</h2>
               <br>
-              <p>Python | ArcPy | R | RStudio | IDRISI TerrSet | ArcGIS | GitHub | Slack | Google Earth Pro | HTML | CSS | JavaScript | Google Earth Engine</p>
+              <p>R | RStudio | Python | ArcPy | IDRISI TerrSet | ArcGIS | GitHub | Slack | Google Earth Pro | HTML | CSS | JavaScript | Google Earth Engine</p>
             </div>
             <br>
             <div>
-              <h2 style="color: var(--accent2); font-weight: bold; font-family: 'Montserrat', sans-serif;">Certifications</h2>
+              <h2 style="color: var(--accent2); font-weight: bold; font-family: 'Montserrat', sans-serif;">Certifications & Certificates</h2>
+              <br>
+              <p>NASA ARSET Assessing Extreme Weather Statistics using NASA Earth eXchange Global Daily Downscaled Projections (NEX-GDDP-CMIP6),  <i>September 2025</i></p>
+              <br>
+              <p>IIASA CWatM Level A1 Certificate,  <i>July 2024</i></p>
               <br>
               <p>Certified Software Carpentry Instructor,  <i>July 2022 – Present</i></p>
             </div>
